--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,14 @@ body {
   src: url("../fonts/LeagueSpartan-Bold.otf");
 }
 @font-face {
+  font-family: "dosis";
+  src: url("../fonts/Dosis-VariableFont_wght.ttf");
+}
+@font-face {
+  font-family: "opensans";
+  src: url("../fonts/OpenSans-VariableFont_wdth\,wght.ttf");
+}
+@font-face {
   font-family: "brandon";
   src: url("../fonts/brandon-grotesque-black-58a8a3e824392.otf");
 }
@@ -43,6 +51,14 @@ body {
 
 .league {
   font-family: "league";
+}
+
+.dosis {
+  font-family: "dosis";
+}
+
+.opensans {
+  font-family: "opensans";
 }
 .brandon {
   font-family: "brandon";
